# notification-app

./: .env  .gitignore  Cargo.toml  INTEGRATION_SUMMARY.md  README.md  database.sqlite  database.sqlite-shm  database.sqlite-wal  deploy.sh  package-lock.json  package.json  pubspec.yaml  todo.md
.github/workflows/: rust_ci.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
backend/notification-backend/: requirements.txt
backend/notification-backend/instance/: notification_app.db
backend/notification-backend/src/: main.py
backend/notification-backend/src/models/: user.py
backend/notification-backend/src/routes/: auth.py  (+2 more)
docs/: architecture.md
frontend/notification-frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/notification-frontend/src/: App.css  App.jsx  main.jsx
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
migrations/: 001_initial.sql  20250703_initial.sql
src/: app.js  main.rs
src/handlers/: auth.rs  mod.rs  notifications.rs  totp.rs
src/middleware/: auth.js  auth.rs  rateLimiter.js
src/models/: Attachment.js  Notification.js  User.js  attachment.rs  index.js  mod.rs  notification.rs  user.rs
src/routes/: auth.js  notifications.js  upload.js  users.js
src/utils/: auth.rs  mod.rs  totp.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+11 files in other folders)
